--- a/config/routes/new_route2.yaml
+++ b/config/routes/new_route2.yaml
@@ -13,7 +13,7 @@ tasks:
   deliver_blue_flipped:
     - log: "W: Delivering blue"
     - move: 1.68/0.61/-1.047
-    - move: 1.81/0.61/-1.047
+    - move: 1.78/0.61/-1.047
     #- call: ArmHalfUp
     - call: ValveOn
     - sleep: 0.3
@@ -32,6 +32,12 @@ tasks:
     - move: 1.68/1.39/-1.047
     - score: 1
     - sleep: 0.2
+    - move: 1.68/0.61/-1.047
+    - move: 1.78/0.61/-1.047
+    - call: ValveOn
+    - sleep: 0.3
+    - call: PumpOff
+    - call: ValveOff
 
 
   home:
