--- a/config/routes/new_route2.yaml
+++ b/config/routes/new_route2.yaml
@@ -22,7 +22,7 @@ tasks:
     - score: 3
     - move: 1.68/0.61/-1.047
     - call: ArmDown
-    - move: 1.68/1.39/-1.047
+    - move: 1.68/1.39/-1.047             #ebashim do 2 fihki
     - call: ArmHalfDown
     - call: PumpOn
     - move: 1.8/1.39/-1.047
@@ -37,6 +37,7 @@ tasks:
     - call: ValveOn
     - sleep: 0.3
     - call: PumpOff
+    - score: 3
     - call: ValveOff
     - move: 1.68/0.79/-1.047
     - call: ArmDown
