--- a/config/routes/new_route2.yaml
+++ b/config/routes/new_route2.yaml
@@ -1,5 +1,4 @@
 tasks:
-  
   get_flipped: 
     - move: 1.68/1.39/-1.047
     - call: ArmHalfDown
@@ -20,7 +19,7 @@ tasks:
     - call: PumpOff
     - call: ValveOff
     - score: 3
-    get_flipped2:
+  get_flipped2:
     - move: 1.68/0.61/-1.047
     - call: ArmDown
     - move: 1.68/1.39/-1.047             #ebashim do 2 fihki
@@ -33,7 +32,7 @@ tasks:
     - move: 1.68/1.39/-1.047
     - score: 1
     - sleep: 0.2
-    green_flipped:
+  green_flipped:
     - move: 1.68/0.79/-1.047
     - move: 1.8/0.79/-1.047
     - call: ValveOn
@@ -43,8 +42,6 @@ tasks:
     - call: ValveOff
     - move: 1.68/0.79/-1.047
     - call: ArmDown
-
-
   home:
     - log: "W: Going home!"
     - move: 1.4/0.25/1.57
@@ -53,7 +50,7 @@ tasks:
 variables: #MUST BE INTS
   default: 0
   get_flipped_var: 1 
-#interrupts: 
-  # return_to_base:
-  #   - interrupt_condition: "timers/main/40"
-  #   - move: 1/0.4/1.5 
+interrupts: 
+  return_to_base:
+    - interrupt_condition: "timers/main/50"
+    - move: 1/1/0
