--- a/config/routes/calls/calls_dict.yaml
+++ b/config/routes/calls/calls_dict.yaml
@@ -24,6 +24,10 @@
     - "servos_service":
       - "num": 0
       - "state": 36
+      "MicroArmup":
+    - "servos_service":
+      - "num": 1
+      - "state": 36
 #######################
   - "Ohms":
     - "ohm_reader_service":
