--- a/config/routes/new_route2.yaml
+++ b/config/routes/new_route2.yaml
@@ -25,13 +25,11 @@ tasks:
     - move: 1.68/1.39/-1.047             #ebashim do 2 fihki
     - call: ArmHalfDown
     - call: PumpOn
-    - move: 1.8/1.39/-1.047             #надо чекнуть подьезд (слишком много мб)
-    - sleep: 0.2
+    - move: 1.76/1.39/-1.047             #надо чекнуть подьезд (слишком много мб)
     - call: ArmUp
-    - sleep: 0.1
     - move: 1.68/1.39/-1.047
     - score: 1
-    - sleep: 0.2
+    
   green_flipped:
     - move: 1.68/0.79/-1.047
     - move: 1.8/0.79/-1.047
@@ -42,6 +40,32 @@ tasks:
     - call: ValveOff
     - move: 1.68/0.79/-1.047
     - call: ArmDown
+
+  get_flipped3:
+    - move: 1.68/1.39/-1.047
+    - call: ArmHalfDown
+    - call: PumpOn
+    - move: 1.78/1.39/-1.047
+    - sleep: 0.2
+    - call: ArmUp
+    - sleep: 0.1
+    - move: 1.68/1.39/-1.047
+    - score: 1
+
+  red_flipped:
+    - move: 1.68/0.94/-1.047
+    - move: 1.8/0.94/-1.047
+    - call: ValveOn
+    - sleep: 0.3
+    - call: PumpOff
+    - score: 3
+    - call: ValveOff
+    - move: 1.68/0.79/-1.047
+    - call: ArmDown
+
+
+    
+
   home:
     - log: "W: Going home!"
     - move: 1.4/0.25/1.57
