--- a/config/nodes/planers.yaml
+++ b/config/nodes/planers.yaml
@@ -3,8 +3,8 @@ global_planer: #almost everything is in cells, which depends on costmap resoluti
   maximum_jumps: 1300
   fail_count_threshhold: 200 # Should be a big number (max fails mid-way) | These two share same fail counter
   num_of_tries_for_last: 4  # Times planer can fail by max jumps         | ^
-  update_rate: 10
-  step: 5
+  update_rate: 8
+  step: 4
   # Features
   cleanup_feature: 1 #works well if you dont have to go closer to start point during route
   resend: 1
@@ -56,7 +56,7 @@ local_planer:
   cost_threshhold: 35 #100 are walls, then there is inflation (Represents median of cost of points)
   skip_thresh: 3 #max points to skip if fails by cost
   threshhold: 1.8 #in cells, how close to target should robot ride
-  twist_amplify_coeff: 0.7 #depends on resolution, allows to skip points behind
+  twist_amplify_coeff: 1.1 #depends on resolution, allows to skip points behind
   inertia_compensation_coeff: 0.01 #allows for shrap turns (in theory)
   # Important
   disable_adjust_sec_time: 3
@@ -78,11 +78,11 @@ local_planer:
   turn_coeff: 0.75
   min_turn_coeff: 0.4 #final!
   #speed coeffs
-  full_path_coeff_dist: 70 #dist from target in cells at which robot goes full spd (the lower the faster)
+  full_path_coeff_dist: 50 #dist from target in cells at which robot goes full spd (the lower the faster)
   static_coeff:  0.8
   min_coeff: 0.3 #Final!!
-  path_speed_coeff: 1.5 #В тугриках. Robot slows down at start and finish of the route
-  cost_speed_coeff: 1.2 # More = slower
+  path_speed_coeff: 1.3 #More = faster. В тугриках. Robot slows down at start and finish of the route
+  cost_speed_coeff: 1.3 # More = slower
   max_cost_speed_coeff: 2 #more = more slowing 
   # Circles on which planer tries to find lowest cost position
   num_of_circles: 2
