--- a/config/routes/new_route2.yaml
+++ b/config/routes/new_route2.yaml
@@ -1,4 +1,7 @@
 tasks:
+
+  obezd_govna:
+    - move: 1.68/0.61/-1.047    # фишки больще не мешают 
   get_flipped: 
     - move: 1.68/1.39/-1.047
     - call: ArmHalfDown
@@ -53,8 +56,8 @@ tasks:
     - score: 1
 
   red_flipped:
-    - move: 1.68/0.94/-1.047
-    - move: 1.8/0.94/-1.047
+    - move: 1.68/0.98/-1.047
+    - move: 1.8/0.98/-1.047
     - call: ValveOn
     - sleep: 0.3
     - call: PumpOff
@@ -62,6 +65,7 @@ tasks:
     - call: ValveOff
     - move: 1.68/0.79/-1.047
     - call: ArmDown
+    - move: 1.54/0.98/-1.047
 
 
     
