--- a/config/routes/calls/calls_dict.yaml
+++ b/config/routes/calls/calls_dict.yaml
@@ -30,7 +30,7 @@
       - "num": 3
       - "state": 100
 
-  - "MicroArmDowm":
+  - "MicroArmDown":
     - "servos_service":
       - "num": 3
       - "state": 0
