--- a/config/routes/calls/calls_dict.yaml
+++ b/config/routes/calls/calls_dict.yaml
@@ -24,17 +24,33 @@
     - "servos_service":
       - "num": 0
       - "state": 36
-
+   ##
   - "MicroArmUp":
     - "servos_service":
       - "num": 3
       - "state": 100
-
+    ##
   - "MicroArmDown":
     - "servos_service":
       - "num": 3
       - "state": 0
+#####
+  - "MicroArmHalf":
+    - "servos_service":
+      - "num": 3
+      - "state": 75
 #######################
+  - "kub_input":
+    - "servos_service":
+      - "num": 2
+      - "state": 10
+      ##
+
+  - "kub_output":
+    - "servos_service":
+      - "num": 2
+      - "state": -100
+      ##
   - "Ohms":
     - "ohm_reader_service":
       - "pin": 0 #(read ohms on "num" analog pin to ground)
