--- a/config/routes/calls/calls_dict.yaml
+++ b/config/routes/calls/calls_dict.yaml
@@ -33,17 +33,17 @@
   - "MicroArmDown":
     - "servos_service":
       - "num": 3
-      - "state": 0
+      - "state": -50
 #####
   - "MicroArmHalf":
     - "servos_service":
       - "num": 3
-      - "state": 75
+      - "state": 65
 #######################
   - "kub_input":
     - "servos_service":
       - "num": 2
-      - "state": 10
+      - "state": 20
       ##
 
   - "kub_output":
@@ -51,6 +51,23 @@
       - "num": 2
       - "state": -100
       ##
+  - "izmerenie":
+    - "servos_service":
+      - "num": 1
+      - "state": 70
+   ##
+  - "nado_plitka":
+    - "servos_service":
+      - "num": 1
+      - "state": -100
+  ##
+  - "nenado_plitka":
+    - "servos_service":
+      - "num": 1
+      - "state": 50
+
+  
+    
   - "Ohms":
     - "ohm_reader_service":
       - "pin": 0 #(read ohms on "num" analog pin to ground)
