--- a/config/routes/new_route2.yaml
+++ b/config/routes/new_route2.yaml
@@ -1,5 +1,5 @@
+############################################ МАРШРУТ 1
 tasks:
-
   obezd_govna:
     - move: 1.76/0.61/-1.047    # фишки больше не мешают 
   get_flipped: 
