--- a/config/nodes/planers.yaml
+++ b/config/nodes/planers.yaml
@@ -10,8 +10,8 @@ global_planer: #almost everything is in cells, which depends on costmap resoluti
   resend: 1
   stuck_check_feature: 1
   experimental_cleanup_enable: 1
-  #
-  recovery_cost_step: 50 #if stuck in begining increases allowed cost (DIVIDED BY UPDATE RATE)
+  # (MULTIPLIED BY UPDATE RATE)
+  recovery_cost_step: 1 #if stuck in begining increases allowed cost 
   #
   twist_amplify_coeff: -0.2
   consecutive_jumps_threshhold: 1 #Leave a target each 'n' straight hops
