--- a/config/routes/new_route2.yaml
+++ b/config/routes/new_route2.yaml
@@ -1,6 +1,7 @@
 ############################################ МАРШРУТ 1
 tasks:
   obezd_govna:
+    - score: 4                  # ставим статуэтку и витрину
     - move: 1.76/0.61/-1.047    # фишки больше не мешают 
   get_flipped: 
     - move: 1.68/1.34/-1.047
