--- a/config/routes/new_route2.yaml
+++ b/config/routes/new_route2.yaml
@@ -1,7 +1,7 @@
 tasks:
 
   obezd_govna:
-    - move: 1.76/0.61/-1.047    # фишки больше не мешают 
+    - move: 1.7/0.61/-1.047    # фишки больше не мешают 
   get_flipped: 
     - move: 1.68/1.34/-1.047
     - call: ArmHalfDown
@@ -10,12 +10,12 @@ tasks:
     - sleep: 0.2
     - call: ArmUp
     - sleep: 0.1
-    - move: 1.68/1.394-1.047
+    - move: 1.68/1.39/-1.047
     - score: 1
   deliver_blue_flipped:
     - log: "W: Delivering blue"
     - move: 1.68/0.61/-1.047
-    - move: 1.78/0.61/-1.047
+    - move: 1.8/0.61/-1.047
     #- call: ArmHalfUp
     - call: ValveOn
     - sleep: 0.3
@@ -28,14 +28,16 @@ tasks:
     - move: 1.68/1.34/-1.047             #ebashim do 2 fihki
     - call: ArmHalfDown
     - call: PumpOn
-    - move: 1.79/1.34/-1.047             #надо чекнуть подьезд (слишком много мб)
+    - move: 1.78/1.34/-1.047                #  вроде норм подьезд
+    - sleep: 0.2             
     - call: ArmUp
+    - sleep: 0.1
     - move: 1.68/1.34/-1.047
     - score: 1
     
   green_flipped2:
     - move: 1.68/0.79/-1.047
-    - move: 1.76/0.79/-1.047
+    - move: 1.8/0.79/-1.047
     - call: ValveOn
     - sleep: 0.3
     - call: PumpOff
@@ -65,15 +67,13 @@ tasks:
     - call: ValveOff
     - move: 1.68/1.03/-1.047
     - call: ArmDown
-    - move: 1.4/1.03/-1.047
+    - move: 1.25/1.03/-1.047
 
-
-    
-
-  home:
+  tolkaem_fishku:
     - log: "W: Going home!"
     - move: 1.4/0.25/1.57
-    - score: 21 #20 for return 1 for hexagon
+    - score: 1
+    - move: 1.4/0.4/1.57
 
 variables: #MUST BE INTS
   default: 0
