--- a/config/routes/new_route2.yaml
+++ b/config/routes/new_route2.yaml
@@ -3,7 +3,7 @@ tasks:
 
   obezd_govna:
     - score: 4                  # ставим статуэтку и витрину
-    - move: 1.76/0.61/-1.047    # фишки больше не мешают 
+    - move: 1.7/0.61/-1.047    # фишки больше не мешают 
 
   get_flipped: 
     - move: 1.68/1.34/-1.047
@@ -76,7 +76,7 @@ tasks:
     - log: "W: Going home!"
     - move: 1.4/0.25/1.57
     - score: 1
-    
+    - move: 1.4/0.4/1.57
     
 
 variables: #MUST BE INTS
