--- a/config/nodes/planers.yaml
+++ b/config/nodes/planers.yaml
@@ -73,10 +73,10 @@ local_planer:
   path_coeff_enable:  1
   #Turn
   pause_before_turn: 0.1 #seconds
-  turn_threshhold: 0.1
+  turn_threshhold: 0.09
   cells_per_radian: 10 #in how many cells should robot turn by one radian (max turn speed, works with dynamic turn)
-  turn_coeff: 0.75
-  min_turn_coeff: 0.4 #final!
+  turn_coeff: 0.8 #More = faster
+  min_turn_coeff: 0.15 #final!
   #speed coeffs
   full_path_coeff_dist: 40 #dist from target in cells at which robot goes full spd (the lower the faster)
   static_coeff:  1
