--- a/config/nodes/global_config.yaml
+++ b/config/nodes/global_config.yaml
@@ -1,4 +1,7 @@
 global:
   use_actionlib: 0
+  default_side: 2
   move_service_name: set_move_service
   change_cost_service_name: change_cost_service
+rplidarNode:
+  serial_port: /dev/ttyUSB1
