--- a/config/routes/calls/calls_dict.yaml
+++ b/config/routes/calls/calls_dict.yaml
@@ -14,6 +14,11 @@
     - "servos_service":
       - "num": 0
       - "state": 0
+    ##
+  - "ArmMegaUp":
+    - "servos_service":
+      - "num": 0
+      - "state": 95
   #############
   - "ArmHalfUp":
     - "servos_service":
