--- a/config/routes/biba_route1.yaml
+++ b/config/routes/biba_route1.yaml
@@ -1,6 +1,7 @@
 ############################################ МАРШРУТ 1
 tasks:
   obezd_govna:
+    - change_cost: 7
     - score: 4                  # ставим статуэтку и витрину
     - move: 1.7/2.43/0
     - sleep: 0.5
