--- a/config/routes/biba_test2.yaml
+++ b/config/routes/biba_test2.yaml
@@ -13,10 +13,10 @@ tasks: #move: x/y/th
     - call: ValveOff
     - change_cost: 60
   top_right: 
-    - move: 1.62/0.44/0
+    - move: 1.62/0.44/-1.57
   start:
-    - move: 1.4/0.25/-0.52
+    - move: 1.44/0.19/-1.57
     - score: 1000
-    - change_cost: 7
+    #- change_cost: 7
 
 
