--- a/config/routes/boba_test1.yaml
+++ b/config/routes/boba_test1.yaml
@@ -13,7 +13,8 @@ tasks: #move: x/y/th
     - call: ValveOff
     - change_cost: 60
   top_left:
-    - move: 1.02/2.6/3.1415 
+    - move: 1.02/2.6/-1.57
   start:
-    - move: 1.2/2.71/-2.617
+    - move: 1.2/2.71/-1.57
     - score: 1000
+    #- change_cost: 7
