--- a/config/routes/boba_test2.yaml
+++ b/config/routes/boba_test2.yaml
@@ -13,8 +13,8 @@ tasks: #move: x/y/th
     - call: ValveOff
     - change_cost: 60
   top_left:
-    - move: 1.02/0.44/0
+    - move: 1.02/0.44/1.57
   start:
-    - move: 1.2/0.3/2.617
+    - move: 1.2/0.16/1.57
     - score: 1000
-    - change_cost: 7
+    #- change_cost: 7
