--- a/config/routes/biba_route1.yaml
+++ b/config/routes/biba_route1.yaml
@@ -3,8 +3,8 @@ tasks:
   obezd_govna:
     - change_cost: 7
     - score: 4                  # ставим статуэтку и витрину
-    - move: 1.7/2.43/0
-    - sleep: 0.5
+    #- move: 1.7/2.43/0
+    #- sleep: 0.5
     - move: 1.7/2.43/-1.047  # фишки больше не мешают 
 
   get_flipped: 
@@ -79,11 +79,11 @@ tasks:
 
   tolkaem_fishku:
     - log: "W: Going home!"
-    - move: 1.4/2.79/1.57
+    - move: 1.4/2.79/0.3
     - score: 1
-    - move: 1.4/2.51/0.15
+    - move: 1.4/2.51/0.3
     - sleep: 0.2
-    - move: 1.4/2.51/0.15
+    - move: 1.4/2.51/0.3
 
   bokovaia1:
     - move: 0.76/2.6/0.3
@@ -110,7 +110,7 @@ tasks:
 
   parkovka:
     - change_cost: 70
-    - move: 0.68/2.12/1.5
+    - move: 0.74/2.20/1.5
     - score: 20 
     - route_stop: epic
     
