--- a/config/routes/boba_test2.yaml
+++ b/config/routes/boba_test2.yaml
@@ -4,17 +4,17 @@ tasks: #move: x/y/th
     - call: PumpOn
     - sleep: 0.5
     - call: PumpOff
-    - call: ArmUp
+    - call: MicroArmHalf
     - sleep: 1
-    - call: ArmDown
+    - call: MicroArmDown
     - sleep: 0.5
     - call: ValveOn
     - sleep: 0.5
     - call: ValveOff
     - change_cost: 60
   top_left:
-    - move: 1.02/0.44/1.57
+    - move: 0.9/0.36/1.57
   start:
-    - move: 1.2/0.16/1.57
+    - move: 1.2/0.15/1.57
     - score: 1000
     #- change_cost: 7
