--- a/config/routes/boba_route2.yaml
+++ b/config/routes/boba_route2.yaml
@@ -18,46 +18,48 @@ tasks:
     - call: KubInput
 
   sgruz:
-    - move: 1.83/0.23/0   
-    - move: 1.7/0.23/0
+    - move: 1.83/0.23/-2.10   
+    - move: 1.7/0.23/-2.10
+    - call: PumpOff
     - call: MicroArmDown
+    
 
   izmerenie0:
-    - move: 0.16/0.77/0
+    - move: 0.16/0.77/2.09
     - call: Ohms
     - sleep: 0.2
 
   izmerenie1:
-    - move : 0.16/0.87/0
+    - move : 0.16/0.87/2.09
     - call: Ohms
     - sleep: 0.2
     
 
   izmerenie2:
-   - move: 0.16/1.05/0
+   - move: 0.16/1.05/2.09
    - call: Ohms
    - sleep: 0.2
 
   izmerenie3:
-   - move: 0.16/1.24/0
+   - move: 0.16/1.24/2.09
    - call: Ohms
    - sleep: 0.2
 
   izmerenie4:
-   - move: 0.16/1.44/0
+   - move: 0.16/1.44/2.09
    - call: Ohms
    - sleep: 0.2
 
   izmerenie5:
-   - move: 0.16/1.62/0
+   - move: 0.16/1.62/2.09
    - call: Ohms
    - sleep: 0.2
 
   izmerenie6:
-   - move: 0.16/1.82/0
+   - move: 0.16/1.82/2.09
    - call: Ohms
    - sleep: 0.2
 
   Parkovka:
-   - move: 0.45/1.12/0
+   - move: 0.45/1.12/2.09
    - route_stop: epic
