--- a/config/routes/boba_route2.yaml
+++ b/config/routes/boba_route2.yaml
@@ -4,12 +4,12 @@ tasks:
   za_statuetkoi:
     - change_cost: 7
     - call: NeNadoPlitka
-    - move : 1/0.46/1.8
-    - move : 0.51/0.46/1.8
+    - move : 1/0.44/1.8
+    - move : 0.48/0.44/1.8
     - call : MicroArmHalf
     - call: PumpOn
     - sleep: 0.2
-    - move: 0.42/0.42/1.8
+    - move: 0.42/0.40/1.8
     - call: MicroArmUp
 
   zamena:
@@ -21,47 +21,82 @@ tasks:
 
   sgruz:
     - move: 1.83/0.23/-2.10   
-    - move: 1.7/0.23/-2.10
     - call: PumpOff
+    - move: 1.7/0.23/-2.10
     - call: MicroArmDown
     
 
   izmerenie0:
     - move: 0.16/0.77/2.09
+    - call: Izmerenie
     - call: Ohms
     - sleep: 0.2
 
   izmerenie1:
     - move : 0.16/0.87/2.09
+    - call: Izmerenie
     - call: Ohms
     - sleep: 0.2
     
 
   izmerenie2:
    - move: 0.16/1.05/2.09
+   - call: Izmerenie
    - call: Ohms
    - sleep: 0.2
 
   izmerenie3:
    - move: 0.16/1.24/2.09
+   - call: Izmerenie
    - call: Ohms
    - sleep: 0.2
 
   izmerenie4:
    - move: 0.16/1.44/2.09
+   - call: Izmerenie
    - call: Ohms
    - sleep: 0.2
 
   izmerenie5:
    - move: 0.16/1.62/2.09
+   - call: Izmerenie
    - call: Ohms
    - sleep: 0.2
 
   izmerenie6:
    - move: 0.16/1.82/2.09
+   - call: Izmerenie
    - call: Ohms
    - sleep: 0.2
 
   Parkovka:
    - move: 0.45/1.12/2.09
    - route_stop: epic
+interrupts:
+  flip!:
+    - interrupt_condition: izmerenie0/call/1/purple
+    - interrupt_condition: izmerenie1/call/1/purple
+    - interrupt_condition: izmerenie2/call/1/purple
+    - interrupt_condition: izmerenie3/call/1/purple
+    - interrupt_condition: izmerenie4/call/1/purple
+    - interrupt_condition: izmerenie5/call/1/purple
+    - interrupt_condition: izmerenie6/call/1/purple
+    - call: NadoPlitka
+    - sleep: 1
+    - call: NeNadoPlitka
+  no_flip!:  
+    - interrupt_condition: izmerenie0/call/1/yellow
+    - interrupt_condition: izmerenie1/call/1/yellow
+    - interrupt_condition: izmerenie2/call/1/yellow
+    - interrupt_condition: izmerenie3/call/1/yellow
+    - interrupt_condition: izmerenie4/call/1/yellow
+    - interrupt_condition: izmerenie5/call/1/yellow
+    - interrupt_condition: izmerenie6/call/1/yellow
+    - interrupt_condition: izmerenie0/call/1/red
+    - interrupt_condition: izmerenie1/call/1/red
+    - interrupt_condition: izmerenie2/call/1/red
+    - interrupt_condition: izmerenie3/call/1/red
+    - interrupt_condition: izmerenie4/call/1/red
+    - interrupt_condition: izmerenie5/call/1/red
+    - interrupt_condition: izmerenie6/call/1/red
+    - call: NeNadoPlitka
