--- a/config/routes/biba_route2.yaml
+++ b/config/routes/biba_route2.yaml
@@ -31,6 +31,9 @@ tasks:
     - call: ValveOff
     - score: 3
   get_flipped2:
+    - change_cost: 70
+    - move: 1.68/0.4/-1.047
+    - change_cost: 7
     - move: 1.68/0.61/-1.047
     - call: ArmDown
     - move: 1.68/1.34/-1.047             #ebashim do 2 fihki
