--- a/config/routes/boba_route2.yaml
+++ b/config/routes/boba_route2.yaml
@@ -5,12 +5,12 @@ tasks:
     - change_cost: 7
     - call: NeNadoPlitka
     - move : 1/0.44/1.8
-    - move : 0.49/0.43/1.8
-    - move : 0.49/0.43/1.8
+    - move : 0.49/0.43/1.75
+    - move : 0.49/0.43/1.75
     - call : MicroArmHalf
     - call: PumpOn
     - sleep: 0.2
-    - move: 0.42/0.39/1.8
+    - move: 0.38/0.39/1.8
     - call: MicroArmUp
 
   zamena:
@@ -23,8 +23,13 @@ tasks:
   sgruz:
     - move: 1.6/0.23/-2.10  
     - change_cost: 90
-    - move: 1.78/0.23/-2.10   
+    - move: 1.81/0.23/-2.10   
+    - sleep: 0.2
+    - call: ValveOn
+    - sleep: 0.3
     - call: PumpOff
+    - call: ValveOff
+    - sleep: 0.2
     - move: 1.7/0.23/-2.10
     - change_cost: 7
     - move: 1.6/0.23/-2.10
@@ -43,6 +48,9 @@ tasks:
     - call: Izmerenie
     - call: Ohms
     - sleep: 0.2
+    - call: NadoPlitka
+    - sleep: 0.1
+    - call: NeNadoPlitka
     
 
   izmerenie2:
