--- a/config/nodes/boba_laser_scan_callback.yaml
+++ b/config/nodes/boba_laser_scan_callback.yaml
@@ -1,5 +1,6 @@
 
 laser_scan_callback:
+  beacons/adjust_amp: 0.9
   update_rate: 7 # More than 7 is useless
   rads_offset: 2.055 # radians offset of lidar front from robot first wheel 2.093 = 120deg
   enable_centre_aprox: 1
@@ -51,7 +52,7 @@ laser_scan_callback:
     pub_all: 1
     only_linear_adj: 0
     ##
-    cycles_per_update: 2
+    cycles_per_update: 3
     min_rad: 0.0005
     max_rad: 0.12
     max_dist_from_expected: 0.3
