--- a/config/nodes/laser_scan_callback.yaml
+++ b/config/nodes/laser_scan_callback.yaml
@@ -1,5 +1,6 @@
 
 laser_scan_callback:
+  beacons/adjust_amp: 0.9
   update_rate: 7 # More than 7 is useless
   rads_offset: 2.0325 # radians offset of lidar front from robot first wheel 2.093 = 120deg
   enable_centre_aprox: 1
@@ -23,7 +24,7 @@ laser_scan_callback:
   #############
   min_dots: 1
   max_dots_per_obj: 60
-  objects_centre_coeff: 55 #dont even think about it, but the larger the coeff, the farther from robot aprox center of objects is
+  objects_centre_coeff: 65 #dont even think about it, but the larger the coeff, the farther from robot aprox center of objects is
   radius_thresh: 1.5
   ################
   obstacles:
@@ -51,7 +52,7 @@ laser_scan_callback:
     pub_all: 1
     only_linear_adj: 0
     ##
-    cycles_per_update: 2
+    cycles_per_update: 3
     min_rad: 0.0005
     max_rad: 0.14
     max_dist_from_expected: 0.3
