--- a/config/routes/boba_route2.yaml
+++ b/config/routes/boba_route2.yaml
@@ -5,25 +5,27 @@ tasks:
     - change_cost: 7
     - call: NeNadoPlitka
     - move : 1/0.44/1.8
-    - move : 0.49/0.43/1.75
-    - move : 0.49/0.43/1.75
+    - move : 0.49/0.42/1.8
+    - move : 0.49/0.42/1.8
     - call : MicroArmHalf
     - call: PumpOn
     - sleep: 0.2
-    - move: 0.38/0.39/1.8
+    - move: 0.37/0.35/1.8
     - call: MicroArmUp
 
   zamena:
     - move: 0.43/0.45/-2.15    ##поворачиваемся к реплике
     - move : 0.4/0.36/-2.15
+    - sleep: 0.2
     - call : KubOutput
     - sleep: 0.1
     - call: KubInput
 
   sgruz:
-    - move: 1.6/0.23/-2.10  
+    - move: 1.6/0.2/-2.10  
     - change_cost: 90
-    - move: 1.81/0.23/-2.10   
+    - move: 1.77/0.2/-2.10   
+    - call : MicroArmHalf
     - sleep: 0.2
     - call: ValveOn
     - sleep: 0.3
