--- a/config/routes/biba_route1.yaml
+++ b/config/routes/biba_route1.yaml
@@ -121,7 +121,7 @@ tasks:
 variables: #MUST BE INTS
   default: 0
   get_flipped_var: 1 
-#interrupts: 
-  # return_to_base:
-  #   - interrupt_condition: "timers/main/40"
-  #   - move: 1/0.4/1.5 
+interrupts: 
+  end_inter:
+    - interrupt_condition: timers/main/99
+    - call: PumpOff
