--- a/config/nodes/planers.yaml
+++ b/config/nodes/planers.yaml
@@ -1,9 +1,10 @@
 global_planer: #almost everything is in cells, which depends on costmap resolution
-  maximum_cost: 15 #Most important
+  maximum_cost: 6 #Most important
+  absolute_max_cost: 70
   maximum_jumps: 1300
   fail_count_threshhold: 200 # Should be a big number (max fails mid-way) | These two share same fail counter
-  num_of_tries_for_last: 8  # Times planer can fail by max jumps         | ^
-  update_rate: 10
+  num_of_tries_for_last: 3  # Times planer can fail by max jumps         | ^
+  update_rate: 12
   step: 3.5
   update_stop_thresh: 3 # Dist from target IN STEPS, when stops updating route
   # (DIVIDED BY UPDATE RATE)
@@ -55,15 +56,15 @@ local_planer:
   #Topics:
   disable_adjust_sec_topic: disable_adjust_sec
   ###############
-  cost_threshhold: 60 #100 are walls, then there is inflation (Represents median of cost of points)
-  skip_thresh: 5 #max points to skip if fails by cost
+  cost_threshhold: 24 #100 are walls, then there is inflation (Represents median of cost of points)
+  skip_thresh: 2 #max points to skip if fails by cost
   threshhold: 1.8 #in cells, how close to target should robot ride
   twist_amplify_coeff: 1 #depends on resolution, allows to skip points behind
   inertia_compensation_coeff: 0.01 #allows for shrap turns (in theory)
   # Important
   disable_adjust_sec_time: 3
   
-  safe_footprint_radius: 0.25
+  safe_footprint_radius: 0.18
   update_rate: 14 # in Hz
   rotate_at_end: 1
   get_lowest_cost: 0 #correct targets to follow lowest cost route NOT TESTED
@@ -82,14 +83,14 @@ local_planer:
   #speed coeffs
   full_path_coeff_dist: 70 #dist from target in cells at which robot goes full spd (the lower the faster)
   static_coeff:  1
-  min_coeff: 0.4 #Final!!
-  path_speed_coeff: 1.5 #More = faster. В тугриках. Robot slows down at start and finish of the route
-  cost_speed_coeff: 1.5 # More = slower
-  max_cost_speed_coeff: 3 #more = more slowing 
+  min_coeff: 0.2 #Final!!
+  path_speed_coeff: 1.4 #More = faster. В тугриках. Robot slows down at start and finish of the route
+  cost_speed_coeff: 1.6 # More = slower
+  max_cost_speed_coeff: 4 #more = more slowing 
   # Circles on which planer tries to find lowest cost position
   num_of_circles: 2
   circles_dist: 1 #in cells
   circles_step_radians_resolution: 8 #number of points on each circle
-  footprint_calc_step_radians_resolution: 15 #how many points on circle for calculating cost
+  footprint_calc_step_radians_resolution: 20 #how many points on circle for calculating cost
   #### Params for footprint cost calc
    
