--- a/config/routes/boba_route2.yaml
+++ b/config/routes/boba_route2.yaml
@@ -6,16 +6,17 @@ tasks:
     - call: NeNadoPlitka
     - move : 1/0.44/1.8
     - move : 0.49/0.42/1.8
+    - sleep: 0.5
     - move : 0.49/0.42/1.8
     - call : MicroArmHalf
     - call: PumpOn
     - sleep: 0.2
-    - move: 0.37/0.35/1.8
+    - move: 0.37/0.34/1.8
     - call: MicroArmUp
 
   zamena:
-    - move: 0.43/0.45/-2.15    ##поворачиваемся к реплике
-    - move : 0.4/0.36/-2.15
+    - move: 0.43/0.44/-2.15    ##поворачиваемся к реплике
+    - move : 0.4/0.35/-2.15
     - sleep: 0.2
     - call : KubOutput
     - sleep: 0.1
