--- a/config/routes/biba_route2.yaml
+++ b/config/routes/biba_route2.yaml
@@ -123,7 +123,7 @@ tasks:
 variables: #MUST BE INTS
   default: 0
   get_flipped_var: 1 
-interrupts:              # едем домой (врубить после теста всего маршрута)
-  end_inter:
-    - interrupt_condition: timers/main/99
-    - call: PumpOff
+# interrupts:              # едем домой (врубить после теста всего маршрута)
+#   return_to_base:
+#     - interrupt_condition: "timers/main/50"
+#     - move: 1/1/0
