--- a/config/nodes/planers.yaml
+++ b/config/nodes/planers.yaml
@@ -84,6 +84,7 @@ local_planer:
   full_path_coeff_dist: 42 #dist from target in cells at which robot goes full spd (the lower the faster)
   static_coeff:  1
   min_coeff: 0.2 #Final!!
+  min_path_coeff: 0.5
   path_speed_coeff: 1.6 #More = faster. В тугриках. Robot slows down at start and finish of the route
   cost_speed_coeff: 1.5 # More = slower
   max_cost_speed_coeff: 4 #more = more slowing 
