--- a/config/routes/biba_route1.yaml
+++ b/config/routes/biba_route1.yaml
@@ -18,6 +18,8 @@ tasks:
     - sleep: 0.1
     - move: 1.68/1.69/-1.047
     - score: 1
+    - move: 1.68/2.43/-1.047 
+    
   deliver_blue_flipped:
     - move: 1.68/2.01/-1.047
     - move: 1.8/2.01/-1.047
@@ -31,7 +33,7 @@ tasks:
     
 
   get_flipped2:       
-    - call: ArmDown
+    
     - move: 1.68/1.69/-1.047             #ebashim do 2 fihki
     - call: ArmHalfDown
     - sleep: 0.4
