--- a/config/routes/biba_route2.yaml
+++ b/config/routes/biba_route2.yaml
@@ -2,7 +2,7 @@
 tasks:
 
   obezd_govna:
-    - call: Adjust
+    - call: AdjustOn
     - change_cost: 10
     - score: 4                  # ставим статуэтку и витрину
     #- move: 1.7/0.61/0
@@ -106,9 +106,11 @@ tasks:
   get_flippedbok:
     - move: 0.5/0.53/-3.44
     - sleep: 0.2
-    - move: 0.3/0.3/-3.43
-    - call: ValveOn
+    - move: 0.31/0.31/-3.43
+    - move: 0.31/0.31/-3.43
     - call: PumpOff
+    - sleep: 0.2
+    - call: ValveOn
     - score: 5
     - call: ValveOff
 
