--- a/config/routes/biba_route1.yaml
+++ b/config/routes/biba_route1.yaml
@@ -1,25 +1,28 @@
 ############################################ МАРШРУТ 1
 tasks:
-  obezd_govna:
-    - change_cost: 7
+   obezd_govna:
+    - call: AdjustOn
+    - change_cost: 10
     - score: 4                  # ставим статуэтку и витрину
-    #- move: 1.7/2.43/0
+    #- move: 1.7/0.61/0
     #- sleep: 0.5
     - move: 1.7/2.43/-1.047  # фишки больше не мешают 
 
   get_flipped: 
-    - move: 1.68/1.69/-1.047
+    - move: 1.68/2.04/-1.047
+    - change_cost: 70
+    - move: 1.68/1.7/-1.047
     - call: ArmHalfDown
     - sleep: 0.4
     - call: PumpOn
-    - move: 1.78/1.69/-1.047
+    - move: 1.78/1.7/-1.047
     - sleep: 0.2
     - call: ArmUp
     - sleep: 0.1
-    - move: 1.68/1.69/-1.047
+    - move: 1.68/1.7/-1.047
     - score: 1
-    - move: 1.68/2.43/-1.047 
-    
+    - change_cost: 10
+  
   deliver_blue_flipped:
     - move: 1.68/2.01/-1.047
     - move: 1.8/2.01/-1.047
@@ -30,26 +33,23 @@ tasks:
     - call: ValveOff
     - move: 1.68/2.01/-1.047
     - call: ArmDown
-    
+   
 
-  get_flipped2:       
-    
-    - move: 1.68/1.69/-1.047             #ebashim do 2 fihki
+  get_flipped2:
+    - move: 1.78/1.7/-1.047  
+    - move: 1.68/1.7/-1.047             #ebashim do 2 fihki
     - call: ArmHalfDown
     - sleep: 0.4
     - call: PumpOn
-    - move: 1.78/1.69/-1.047                #  вроде норм подьезд
+    - move: 1.78/1.7/-1.047                #  вроде норм подьезд
     - sleep: 0.2             
     - call: ArmUp
     - sleep: 0.1
-    - move: 1.68/1.69/-1.047
+    - move: 1.68/1.7/-1.047
     - score: 1
     
   green_flipped2:
-    - change_cost: 70
-    - move: 1.68/2.55/-1.047
     - move: 1.68/2.25/-1.047
-    - change_cost: 10
     - move: 1.8/2.25/-1.047
     - call: ValveOn
     - sleep: 0.3
@@ -60,19 +60,18 @@ tasks:
     - call: ArmDown
 
   get_flipped3:
-    - move: 1.68/1.69/-1.047
+    - move: 1.68/1.7/-1.047
     - call: ArmHalfDown
     - sleep: 0.4
     - call: PumpOn
-    - move: 1.78/1.69/-1.047
+    - move: 1.78/1.7/-1.047
     - sleep: 0.2
     - call: ArmUp
     - sleep: 0.1
-    - move: 1.68/1.69/-1.047
+    - move: 1.68/1.7/-1.047
     - score: 1
 
   red_flipped:
-    - log: "W: Delivering blue"
     - move: 1.68/2.43/-1.047
     - move: 1.8/2.43/-1.047
     #- call: ArmHalfUp
@@ -81,48 +80,41 @@ tasks:
     - call: PumpOff
     - call: ValveOff
     - score: 3
-
-  tolkaem_fishku:
-    - log: "W: Going home!"
-    - move: 1.4/2.79/0
-    - move: 1.4/2.51/0
-    - sleep: 0.2
-    - move: 1.4/2.51/0.3
-
+    - move: 1.68/2.43/-1.047
+    - call: ArmDown
   bokovaia1:
-    - move: 0.76/2.6/0.3
-    - move: 0.76/2.6/0.3
+    - move: 0.76/2.6/-2.56
+    - move: 0.76/2.6/-2.56
     - call: ArmHalfDown
     - sleep: 0.4
     - call: PumpOn
-    - move: 0.76/2.77/0.3
+    - move: 0.76/0.77/-2.56
     - sleep: 0.3
     - call: ArmMegaUp
     - sleep: 0.3
     - score: 1
-    - move: 0.76/2.6/0.3
+    - move: 0.76/2.6/-2.56
    # - call: PumpOff
    
   get_flippedbok:
-    - move: 0.5/2.51/1.5
+    - move: 0.7/2.51/-3
+    - sleep: 0.3
+    - move: 0.5/2.51/-3.44
     - sleep: 0.2
-    - move: 0.3/2.74/1.5
-    - call: ValveOn
+    - move: 0.315/2.725/-3.4
+    - move: 0.315/2.725/-3.4
     - call: PumpOff
+    - sleep: 0.2
+    - call: ValveOn
     - score: 5
     - call: ValveOff
 
   parkovka:
     - change_cost: 70
-    - move: 0.74/2.20/1.5
+    - move: 0.74/2.26/-3.43
     - score: 20 
-    - route_stop: epic
-    
-
-variables: #MUST BE INTS
-  default: 0
-  get_flipped_var: 1 
-interrupts: 
+    - route_stop: epics
+interrupts:              
   end_inter:
     - interrupt_condition: timers/main/99
     - call: PumpOff
