--- a/config/routes/boba_route1.yaml
+++ b/config/routes/boba_route1.yaml
@@ -5,18 +5,18 @@ tasks:
     - change_cost: 7
     - call: NeNadoPlitka
     - move : 1/2.6/0.23
-    - move : 0.49/2.58/0.23
+    - move : 0.49/2.58/0.2
     - sleep: 0.5
-    - move : 0.49/2.58/0.23
+    - move : 0.49/2.58/0.2
     - call : MicroArmHalf
     - call: PumpOn
     - sleep: 0.2
-    - move: 0.37/2.7/0.23
+    - move: 0.37/2.7/0.2
     - call: MicroArmUp
 
   zamena:
-    - move: 0.43/2.6/-3.72    ##поворачиваемся к реплике
-    - move : 0.4/2.69/-3.72
+    - move: 0.43/2.6/-3.78    ##поворачиваемся к реплике
+    - move : 0.4/2.69/-3.78
     - sleep: 0.2
     - call : KubOutput
     - sleep: 0.1
@@ -25,30 +25,31 @@ tasks:
   sgruz:
     - move: 1.6/2.84/-2.10  
     - change_cost: 90
-    - move: 1.77/2.84/-2.10   
+    - move: 1.82/2.84/-2.10   
     - call : MicroArmHalf
+    - sleep: 0.5
+    - call: PumpOff
     - sleep: 0.2
     - call: ValveOn
-    - sleep: 0.3
-    - call: PumpOff
+    - sleep: 0.1
     - call: ValveOff
-    - sleep: 0.2
     - move: 1.7/2.81/-2.10
     - change_cost: 7
     - move: 1.6/2.81/-2.10
     - call: MicroArmDown
-    
 
-  izmerenie0:
+  damn:
     - move: 0.4/2.39/2.09
     - call: PumpOff
-    - move: 0.16/2.37/2.09
+
+  izmerenie0:
+    - move: 0.17/2.34/2.09
     - call: Izmerenie
     - call: Ohms
     - sleep: 0.2
 
   izmerenie1:
-    - move : 0.16/2.2/2.09
+    - move : 0.17/2.18/2.09
     - call: Izmerenie
     - call: Ohms
     - sleep: 0.2
@@ -58,31 +59,31 @@ tasks:
     
 
   izmerenie2:
-   - move: 0.16/2/2.09
+   - move: 0.17/2/2.09
    - call: Izmerenie
    - call: Ohms
    - sleep: 0.2
 
   izmerenie3:
-   - move: 0.16/1.81/2.09
+   - move: 0.17/1.81/2.09
    - call: Izmerenie
    - call: Ohms
    - sleep: 0.2
 
   izmerenie4:
-   - move: 0.16/1.61/2.09
+   - move: 0.17/1.61/2.09
    - call: Izmerenie
    - call: Ohms
    - sleep: 0.2
 
   izmerenie5:
-   - move: 0.16/1.43/2.09
+   - move: 0.17/1.43/2.09
    - call: Izmerenie
    - call: Ohms
    - sleep: 0.2
 
   izmerenie6:
-   - move: 0.16/1.24/2.09
+   - move: 0.17/1.24/2.09
    - call: Izmerenie
    - call: Ohms
    - sleep: 0.2
